# power_market_analysis

./: environment.yaml  pyproject.toml  question1.html
.ipynb_checkpoints/: question1-checkpoint.ipynb  question2-checkpoint.ipynb
algorithms/: flexa_battery_optimise.py
archiv/Flexa_assignment/: question2.ipynb
data/day_ahead/: DA price 15min 2021.xlsx  DA price 15min 2022.xlsx  DA price 15min 2023.xlsx  DA price 15min 2024.xlsx
data/optimization/da_optimization/weekly_optimization/: battery_operation_2023_1.csv  battery_operation_2023_10.csv  battery_operation_2023_11.csv  battery_operation_2023_12.csv  battery_operation_2023_13.csv  battery_operation_2023_14.csv  battery_operation_2023_15.csv  battery_operation_2023_16.csv  battery_operation_2023_17.csv  battery_operation_2023_18.csv  battery_operation_2023_19.csv  battery_operation_2023_2.csv  battery_operation_2023_20.csv  battery_operation_2023_21.csv  battery_operation_2023_22.csv  battery_operation_2023_23.csv  battery_operation_2023_24.csv  (+87 more)
data/optimization/multi_market_optimization/: result_2024-01-01_to_2024-12-31.csv
data/processed/day_ahead/: da_price_2023.csv  da_price_2024.csv
data/raw/day_ahead/: DA price 15min 2024.csv
data/raw/power_generation/: energy-charts_Electricity_production_in_Germany_in_2024.xlsx
src/algorithms/: battery_optimise.py  battery_optimize.py  predict_model.py
src/data_prep/: da_price_analysis.ipynb  da_price_prep.ipynb  fcr_price_prep.ipynb
src/optimization/: da_optimization.ipynb  multi_market_optimization.ipynb
src/utils/: utils.py
utils/: utils.py
(+3 files in other folders)
